--- a/.github/workflows/pythonmain.yml
+++ b/.github/workflows/pythonmain.yml
@@ -22,5 +22,4 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests with pytest
-      run: |
-        pytest
+      run: pytest tests/
